--- a/week4-html-css-js/demo/webpage/src/input.css
+++ b/week4-html-css-js/demo/webpage/src/input.css
@@ -2,12 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.background-img {
+.background {
     width: 100%;
-    object-fit: cover;
-    height: 1000px;
-}
-
-.profile-left {
-    width: 20%;
+    
+    height: 1px;
 }
